--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "redux-devtools": "^3.5.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1"
@@ -22,8 +23,11 @@
   "dependencies": {
     "bable-loader": "0.0.1-security",
     "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.10.0",
-    "react-dom": "^16.10.0"
+    "react-dom": "^16.10.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4"
   },
   "presets": [
     "@babel/preset-env",
